# aq

./: Cargo.toml  README.md  default.nix
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: jq-upstream-benchmark.json  jq-upstream-benchmark.md  yq-upstream-benchmark.json  yq-upstream-benchmark.md
docs/: index.md  jq-compatibility.md  package.json  performance.md  starlark.md
docs/.vitepress/: config.mts
examples/starlark/: README.md  calendar_rollup.star  clean_k8s_metadata.star  config_map_names.star  embedded_config.star  emit_manifest_summaries.star  emit_note_copies.star  find_secretish_fields.star  fingerprint_library.star  generate_app_toml.star  library_index.star  manifest_summary.star  manifest_tree_summary.star  merge_overlay.star  normalize_note_files.star  normalize_strings.star  redact_secretish_fields.star  sanitize_contacts.star  self_inventory.star  shift_release_window.star  stage_report.star  time_snapshot.star  users_over_30.star
scripts/: jq_compat_report.py  jq_upstream_benchmark.py  jq_upstream_fail_report.py  jq_upstream_report.py  yq_upstream_benchmark.py
src/: app.rs  color.rs  error.rs  format.rs  inplace.rs  lib.rs  main.rs  query.rs  starlark.rs  value.rs
tests/: cli.rs
tests/fixtures/: edit.json  edit.toml  infer_scalars.csv  infer_scalars.tsv  jq_compat_suite.json  multidoc.yaml  roundtrip_single.csv  roundtrip_single.json  roundtrip_single.jsonl  roundtrip_single.toml  roundtrip_single.tsv  roundtrip_single.yaml  roundtrip_stream.csv  roundtrip_stream.jsonl  roundtrip_stream.tsv  roundtrip_stream.yaml
(+6 files in other folders)
